# cmdo

./: .gitignore  LICENSE  README.md  ai-terminal-function-design.md  pyproject.toml
src/cmdo/: __init__.py  cli.py  clipboard.py  config.py  context.py  display.py  executor.py  models.py
src/cmdo/llm/: client.py  parser.py  prompt.py
src/cmdo/safety/: classifier.py  forbidden.py
tests/: test_classifier.py  test_context.py  test_forbidden.py  test_parser.py
